--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container ">
             <header class="d-flex justify-content-center py-3">
               <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/site/index.html" class="nav-link active" aria-current="page">หน้าแรก</a></li>
+                <li class="nav-item"><a href="/index.html" class="nav-link active" aria-current="page">หน้าแรก</a></li>
                 <li class="nav-item"><a href="" class="nav-link">ระบบพื้นฐาน</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">เติมเงิน</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">ดาวน์โหลด</a></li>
@@ -23,7 +23,7 @@
             </header>   
           </div>
           <div class="px-4 py-5 my-5 text-center">
-            <img class="d-block mx-auto mb-4" src="/site/img/logo-full-transparent.png" alt="" width="490" height="140">
+            <img class="d-block mx-auto mb-4" src="/img/logo-full-transparent.png" alt="" width="490" height="140">
             <h1 class="display-5 fw-bold pt-5">ยินดีต้อนรับ</h1>
             <div class="col-lg-6 mx-auto">
               <p class="lead mb-4">เราเป็นผู้ให้บริการเซิร์ฟเวอร์ Minecraft แนวเอาชีวิตรอดที่กำลังพัฒนาระบบอยู่เรื่อยๆ โดยทางเราจะเน้นไปที่การสร้างสังคมที่ดีออกมาในรูปแบบของเซิร์ฟเวอร์ Minecraft นั่นเอง
