--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>WestWood - สังคมที่ดีย์</title>
+        <title>Westwood - สังคมที่ดีย์</title>
         <link rel="icon" href="img/favicon.ico"/>
         <link href="/css/style.css" rel="stylesheet" >
         <link href="https://fonts.googleapis.com/css?family=Mitr" rel="stylesheet" >
