--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 Minecraft นั่นเอง
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-5">
-                <button type="button" class="btn btn-light btn-lg px-4 gap-3" onclick="location.href = '/basic.html';">
+                <button type="button" class="btn btn-light btn-lg px-4 gap-3" onclick="location.href = 'westwoodproject.github.io/basic';">
                     ระบบพื้นฐาน
                 </button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="location.href = '/downloads.html';">
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="location.href = 'westwoodproject.github.io/downloads';">
                     ดาวน์โหลด
                 </button>
             </div>
@@ -51,7 +51,7 @@
 
     <!--footer-->
     <div class="text-white text-center p-3">© 2023 Copyright
-    <a class="text-white" href="index.html"> Westwood Project</a></div>
+    <a class="text-white" href="https://westwoodproject.github.io/"> Westwood Project</a></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"crossorigin="anonymous"></script>
 </body>
 
