--- a/downloads.html
+++ b/downloads.html
@@ -27,12 +27,12 @@
     
     <!--Main-->
     <div class="px-4 pt-5 my-5 text-center border-bottom">
-        <h1 class="display-4 fw-bold">ดาวน์โหลด</h1>
+        <h1 class="display-4 fw-bold text-white ">ดาวน์โหลด</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">Minecraft เป็นเกมที่มี Launcher หรือว่า Client หลายตัวมากๆ แต่ว่าทางเซิร์ฟเวอร์ของเราจะแนะนำให้ใช้ตัวของ Official เพื่อความเป็นกลางมากที่สุด</p>
+          <p class="lead mb-4 text-white">Minecraft เป็นเกมที่มี Launcher หรือว่า Client หลายตัวมากๆ แต่ว่าทางเซิร์ฟเวอร์ของเราจะแนะนำให้ใช้ตัวของ Official เพื่อความเป็นกลางมากที่สุด</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-light btn-lg px-4 me-sm-3" onclick="window.open('https://www.minecraft.net/en-us/download')">ดาวน์โหลด Launcher</button>
-            <button type="button" class="btn btn-outline-light btn-lg px-4" onclick="window.open('https://www.oracle.com/java/technologies/downloads/')">ดาวน์โหลด Java</button>
+            <button type="button" class="btn btn-light btn-lg px-4 me-sm-3" onclick="window.open('www.minecraft.net/en-us/download')">ดาวน์โหลด Launcher</button>
+            <button type="button" class="btn btn-outline-light btn-lg px-4" onclick="window.open('www.oracle.com/java/technologies/downloads/')">ดาวน์โหลด Java</button>
           </div>
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
