--- a/downloads.html
+++ b/downloads.html
@@ -32,12 +32,75 @@
           <p class="lead mb-4 text-white">Minecraft เป็นเกมที่มี Launcher หรือว่า Client หลายตัวมากๆ แต่ว่าทางเซิร์ฟเวอร์ของเราจะแนะนำให้ใช้ตัวของ Official เพื่อความเป็นกลางมากที่สุด</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
             <button type="button" class="btn btn-light btn-lg px-4 me-sm-3" onclick="window.open('https://www.minecraft.net/en-us/download')">ดาวน์โหลด Launcher</button>
-            <button type="button" class="btn btn-outline-light btn-lg px-4" onclick="window.open('https://www.oracle.com/java/technologies/downloads/')">ดาวน์โหลด Java</button>
+            <button type="button" class="btn btn-outline-light btn-lg px-4" onclick="window.open('https://www.oracle.com/java/technologies/downloads')">ดาวน์โหลด Java</button>
           </div>
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
           <div class="container px-5">
             <img src="/src/img/launcher.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+          </div>
+        </div>
+      </div>
+      <!--System Reqirement-->
+      <div class="container px-4 py-5" id="icon-grid">
+        <h2 class="pb-2 border-bottom">ความต้องการของระบบ : ขั้นแนะนำ</h2>
+    
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
+            <div>
+              <h3 class="fw-bold mb-0 fs-4">CPU</h3>
+              <p>Intel Core i5-4690, AMD A10-7800 APU หรือเทียบเท่า</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
+            <div>
+              <h3 class="fw-bold mb-0 fs-4">RAM</h3>
+              <p>8 GB</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
+            <div>
+              <h3 class="fw-bold mb-0 fs-4">GPU</h3>
+              <p>การ์ดจอที่รองรับ OpenGL 4.5 ขึ้นไป, Geforce 700 Series(740+) หรือ Radeon R7 200</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"></use></svg>
+            <div>
+              <h3 class="fw-bold mb-0 fs-4">Storage</h3>
+              <p>4 GB on SSD</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
+            <div>
+              <h3 class="fw-bold mb-0 fs-4">Operating System</h3>
+              <p>Windows: 7 or later, macOS: macOS Mojave(10.14.5) or later, Linux: 64-bit หลังจากปี 2014 ขึ้นไป</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#toggles2"></use></svg>
+            <div>
+              <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+              <p>Paragraph of text beneath the heading to explain the heading.</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#geo-fill"></use></svg>
+            <div>
+              <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+              <p>Paragraph of text beneath the heading to explain the heading.</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#tools"></use></svg>
+            <div>
+              <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+              <p>Paragraph of text beneath the heading to explain the heading.</p>
+            </div>
           </div>
         </div>
       </div>
