--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button type="button" class="btn btn-light btn-lg px-4 gap-3" onclick="location.href = 'https://westwoodproject.github.io/basic';">
                     ระบบพื้นฐาน
                 </button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="location.href = 'https://westwoodproject.github.io/downloads';">
+                <button type="button" class="btn btn-outline-light btn-lg px-4" onclick="location.href = 'https://westwoodproject.github.io/downloads';">
                     ดาวน์โหลด
                 </button>
                 
