--- a/pricing.html
+++ b/pricing.html
@@ -63,7 +63,7 @@
                     <li>Sethome ได้สูงสุด 1 ตำแหน่ง</li>
                     <li>ใช้คำสั่งขั้น Basic ได้</li>
                   </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-outline-dark">ดูคำสั่งขั้น Basic</button>
+                  <button type="button" class="w-100 btn btn-lg btn-outline-dark" onclick="location.href = 'https://westwood-project.gitbook.io/basic/rank/overview#user';">ดูคำสั่งขั้น Basic</button>
                 </div>
               </div>
             </div>
@@ -80,7 +80,7 @@
                     <li>Sethome ได้สูงสุด <a class="text-success">2</a> ตำแหน่ง</li>
                     <li>ใช้คำสั่งขั้น Basic และ VIP ได้</li>
                   </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-warning">ดูคำสั่งขั้น VIP</button>
+                  <button type="button" class="w-100 btn btn-lg btn-warning " onclick="location.href = 'https://westwood-project.gitbook.io/basic/rank/overview#vip';">ดูคำสั่งขั้น VIP</button>
                 </div>
               </div>
             </div>
@@ -97,7 +97,7 @@
                     <li>Sethome ได้สูงสุด <a class="text-success">5</a> ตำแหน่ง</li>
                     <li>ใช้คำสั่งขั้น Basic, VIP, HONOR ได้</li>
                   </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-info">ดูคำสั่งขั้น HONOR</button>
+                  <button type="button" class="w-100 btn btn-lg btn-info" onclick="location.href = 'https://westwood-project.gitbook.io/basic/rank/overview#honor';">ดูคำสั่งขั้น HONOR</button>
                 </div>
               </div>
             </div>
