--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <button type="button" class="btn btn-light btn-lg px-4 gap-3"
-                    onclick="location.href = 'https://westwood-project.gitbook.io/basic/';">
+                    onclick="window.open('https://westwood-project.gitbook.io/basic/','_blank')">
                     ระบบพื้นฐาน
                 </button>
                 <button type="button" class="btn btn-outline-light btn-lg px-4"
