--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--Main-->
 
     <div class="px-4 py-5 my-5 text-center text-white">
-        <img class="d-block mx-auto mb-4" src="/src/img/logo-full-transparent.png" alt="" width="490" height="140" />
+        <img class="d-block mx-auto mb-4 img-fluid" src="/src/img/logo-full-transparent.png" alt="" width="490" height="140" />
         <h1 class="display-5 fw-bold mt-5 mb-3">ยินดีต้อนรับผู้เล่นทุกท่าน</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">
